@@ -23,6 +23,7 @@ import dev.nishisan.utils.ngrid.common.MessageType;
 import dev.nishisan.utils.ngrid.common.NodeId;
 import dev.nishisan.utils.ngrid.common.NodeInfo;
 import dev.nishisan.utils.ngrid.common.PeerUpdatePayload;
+import dev.nishisan.utils.stats.StatsUtils;
 
 import java.io.Closeable;
 import java.io.EOFException;
@@ -37,6 +38,7 @@ import java.time.Instant;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -61,18 +63,21 @@ import java.util.logging.Logger;
  * TCP based transport implementation. It provides best-effort reconnection semantics and
  * a simple handshake protocol that exchanges the list of known peers to gradually form a
  * mesh between all nodes.
+ * <p>
+ * This implementation uses Virtual Threads (Java 21+) to handle concurrency efficiently.
  */
 public final class TcpTransport implements Transport {
     private static final Logger LOGGER = Logger.getLogger(TcpTransport.class.getName());
 
     private final TcpTransportConfig config;
+    private final StatsUtils stats;
     private final Map<NodeId, NodeInfo> knownPeers = new ConcurrentHashMap<>();
     private final Map<NodeId, Connection> connections = new ConcurrentHashMap<>();
     private final Set<TransportListener> listeners = new CopyOnWriteArraySet<>();
     private final Map<UUID, PendingResponse> pendingResponses = new ConcurrentHashMap<>();
-    private final ExecutorService workerPool;
-    private final NetworkRouter router = new NetworkRouter();
-    private Thread acceptThread;
+    // Use Virtual Threads for per-task execution
+    private final ExecutorService workerPool = Executors.newVirtualThreadPerTaskExecutor();
+    private final NetworkRouter router = new NetworkRouter(this::collectLatencies);
     private final ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor(r -> {
         Thread t = new Thread(r, "ngrid-transport-scheduler");
         t.setDaemon(true);
@@ -83,15 +88,14 @@ public final class TcpTransport implements Transport {
     private ServerSocket serverSocket;
 
     public TcpTransport(TcpTransportConfig config) {
+        this(config, null);
+    }
+
+    public TcpTransport(TcpTransportConfig config, StatsUtils stats) {
         this.config = Objects.requireNonNull(config, "config");
+        this.stats = stats;
         knownPeers.put(config.local().nodeId(), config.local());
         config.initialPeers().forEach(p -> knownPeers.putIfAbsent(p.nodeId(), p));
-        ThreadFactory workerFactory = r -> {
-            Thread t = new Thread(r, "ngrid-transport-worker");
-            t.setDaemon(true);
-            return t;
-        };
-        this.workerPool = Executors.newFixedThreadPool(Math.max(1, config.workerThreads()), workerFactory);
     }
 
     // For testing purposes
@@ -107,14 +111,15 @@ public final class TcpTransport implements Transport {
         try {
             serverSocket = new ServerSocket();
             serverSocket.setReuseAddress(true);
-            serverSocket.bind(new InetSocketAddress(config.local().host(), config.local().port()));
+            serverSocket.bind(new InetSocketAddress(config.local().host(), config.local().port()), 100);
         } catch (IOException e) {
             throw new IllegalStateException("Unable to bind TCP transport", e);
         }
         running = true;
-        acceptThread = new Thread(this::acceptLoop, "ngrid-transport-accept");
-        acceptThread.setDaemon(true);
-        acceptThread.start();
+        
+        // Use a Virtual Thread for the accept loop
+        Thread.ofVirtual().name("ngrid-transport-accept").start(this::acceptLoop);
+
         scheduler.scheduleAtFixedRate(this::reconnectLoop,
                 config.reconnectInterval().toMillis(),
                 config.reconnectInterval().toMillis(),
@@ -285,6 +290,14 @@ public final class TcpTransport implements Transport {
     }
 
     @Override
+    public boolean isReachable(NodeId nodeId) {
+        if (isConnected(nodeId)) {
+            return true;
+        }
+        return router.nextHop(nodeId).isPresent();
+    }
+
+    @Override
     public void addPeer(NodeInfo peer) {
         if (peer == null || peer.nodeId().equals(config.local().nodeId())) {
             return;
@@ -299,9 +312,11 @@ public final class TcpTransport implements Transport {
     }
 
     private void acceptLoop() {
+        LOGGER.info("Transport accept loop started on port " + config.local().port());
         while (running) {
             try {
                 Socket socket = serverSocket.accept();
+                LOGGER.fine(() -> "Accepted connection from " + socket.getRemoteSocketAddress());
                 registerConnection(socket, null);
             } catch (SocketException se) {
                 if (running) {
@@ -324,7 +339,9 @@ public final class TcpTransport implements Transport {
         if (!running) {
             return;
         }
-        for (NodeInfo peer : knownPeers.values()) {
+        List<NodeInfo> peers = new ArrayList<>(knownPeers.values());
+        Collections.shuffle(peers); // Randomize order to reduce contention
+        for (NodeInfo peer : peers) {
             if (peer.nodeId().equals(config.local().nodeId())) {
                 continue;
             }
@@ -333,7 +350,13 @@ public final class TcpTransport implements Transport {
     }
 
     private void ensureConnectionAsync(NodeInfo peer) {
-        workerPool.submit(() -> ensureConnection(peer.nodeId()));
+        workerPool.submit(() -> {
+            try {
+                ensureConnection(peer.nodeId());
+            } catch (Throwable t) {
+                LOGGER.log(Level.WARNING, "Unexpected error in connection task for " + peer, t);
+            }
+        });
     }
 
     private Connection ensureConnection(NodeId nodeId) {
@@ -354,11 +377,13 @@ public final class TcpTransport implements Transport {
                 return current;
             }
             try {
+                LOGGER.fine(() -> "Initiating connection to " + nodeInfo);
                 Socket socket = new Socket();
                 socket.connect(new InetSocketAddress(nodeInfo.host(), nodeInfo.port()),
                         (int) config.connectTimeout().toMillis());
                 Connection connection = registerConnection(socket, nodeInfo);
                 sendHandshake(connection);
+                LOGGER.fine(() -> "Connected to " + nodeInfo);
                 return connection;
             } catch (IOException e) {
                 LOGGER.log(Level.FINE, "Unable to connect to {0}: {1}", new Object[]{nodeInfo, e.getMessage()});
@@ -380,9 +405,9 @@ public final class TcpTransport implements Transport {
             connection.setRemote(preResolved);
             connections.put(preResolved.nodeId(), connection);
         }
-        Thread reader = new Thread(connection::readLoop, "ngrid-transport-reader");
-        reader.setDaemon(true);
-        reader.start();
+        // Use Virtual Thread for reading
+        Thread.ofVirtual().name("ngrid-transport-reader").start(connection::readLoop);
+        LOGGER.fine(() -> "Registered connection: " + socket.getRemoteSocketAddress());
         return connection;
     }
 
@@ -416,7 +441,7 @@ public final class TcpTransport implements Transport {
     private void sendHandshake(Connection connection) {
         NodeInfo localInfo = config.local();
         Set<NodeInfo> peers = Set.copyOf(knownPeers.values());
-        HandshakePayload payload = new HandshakePayload(localInfo, peers);
+        HandshakePayload payload = new HandshakePayload(localInfo, peers, collectLatencies());
         ClusterMessage message = ClusterMessage.request(MessageType.HANDSHAKE,
                 "hello",
                 localInfo.nodeId(),
@@ -434,7 +459,7 @@ public final class TcpTransport implements Transport {
         connections.put(remoteInfo.nodeId(), connection);
         
         // Feed router with reachability info
-        router.updateReachability(remoteInfo.nodeId(), payload.peers());
+        router.updateReachability(remoteInfo.nodeId(), payload.peers(), payload.latencies());
 
         listeners.forEach(listener -> listener.onPeerConnected(remoteInfo));
         // Merge peers and attempt connections
@@ -455,7 +480,7 @@ public final class TcpTransport implements Transport {
     }
 
     private void broadcastPeerList() {
-        PeerUpdatePayload payload = new PeerUpdatePayload(Set.copyOf(knownPeers.values()));
+        PeerUpdatePayload payload = new PeerUpdatePayload(Set.copyOf(knownPeers.values()), collectLatencies());
         ClusterMessage update = ClusterMessage.request(MessageType.PEER_UPDATE,
                 "peer-update",
                 config.local().nodeId(),
@@ -464,11 +489,25 @@ public final class TcpTransport implements Transport {
         broadcast(update);
     }
 
+    private Map<NodeId, Double> collectLatencies() {
+        if (stats == null) {
+            return Collections.emptyMap();
+        }
+        Map<NodeId, Double> latencies = new HashMap<>();
+        for (NodeId nodeId : knownPeers.keySet()) {
+            Double rtt = stats.getAverageOrNull(dev.nishisan.utils.ngrid.metrics.NGridMetrics.rttMs(nodeId));
+            if (rtt != null) {
+                latencies.put(nodeId, rtt);
+            }
+        }
+        return latencies;
+    }
+
     private void handlePeerUpdate(ClusterMessage message) {
         PeerUpdatePayload payload = message.payload(PeerUpdatePayload.class);
         
         // Feed router with reachability info
-        router.updateReachability(message.source(), payload.peers());
+        router.updateReachability(message.source(), payload.peers(), payload.latencies());
 
         for (NodeInfo peer : payload.peers()) {
             if (!peer.nodeId().equals(config.local().nodeId())) {
@@ -553,16 +592,10 @@ public final class TcpTransport implements Transport {
         if (serverSocket != null) {
             serverSocket.close();
         }
-        Thread accept = acceptThread;
-        if (accept != null) {
-            try {
-                accept.join(500);
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-            }
-        }
+        // Accept thread will die when socket closes or running is false
+        
         scheduler.shutdownNow();
-        workerPool.shutdownNow();
+        workerPool.shutdownNow(); // Virtual threads will be interrupted
         try {
             workerPool.awaitTermination(3, TimeUnit.SECONDS);
         } catch (InterruptedException e) {
@@ -585,11 +618,6 @@ public final class TcpTransport implements Transport {
         private final ObjectOutputStream outputStream;
         private final ObjectInputStream inputStream;
         private final ConcurrentLinkedQueue<ClusterMessage> outbound = new ConcurrentLinkedQueue<>();
-        private final ExecutorService writer = Executors.newSingleThreadExecutor(r -> {
-            Thread t = new Thread(r, "ngrid-transport-writer");
-            t.setDaemon(true);
-            return t;
-        });
         private volatile NodeInfo remote;
         private volatile boolean open = true;
 
@@ -598,7 +626,8 @@ public final class TcpTransport implements Transport {
             this.outputStream = new ObjectOutputStream(socket.getOutputStream());
             this.outputStream.flush();
             this.inputStream = new ObjectInputStream(socket.getInputStream());
-            writer.submit(this::drainOutbound);
+            // Use Virtual Thread for writing (one per connection to ensure order)
+            Thread.ofVirtual().name("ngrid-transport-writer").start(this::drainOutbound);
         }
 
         void setRemote(NodeInfo remote) {
@@ -625,7 +654,12 @@ public final class TcpTransport implements Transport {
                 while (isOpen()) {
                     ClusterMessage message = outbound.poll();
                     if (message == null) {
-                        TimeUnit.MILLISECONDS.sleep(5);
+                        try {
+                            Thread.sleep(5); // Virtual threads sleep efficiently
+                        } catch (InterruptedException e) {
+                             Thread.currentThread().interrupt();
+                             break;
+                        }
                         continue;
                     }
                     synchronized (outputStream) {
@@ -663,14 +697,19 @@ public final class TcpTransport implements Transport {
 
         @Override
         public void close() throws IOException {
+            if (open) {
+                LOGGER.fine(() -> "Closing connection to " + remote);
+            }
             open = false;
-            writer.shutdownNow();
+            // No need to shutdown writer executor anymore, the flag + socket close will kill it
             socket.close();
         }
 
         private void closeQuietly() {
+            if (open) {
+                LOGGER.fine(() -> "Quietly closing connection to " + remote);
+            }
             open = false;
-            writer.shutdownNow();
             try {
                 socket.close();
             } catch (IOException ignored) {
